manifest/deploy-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: mysql
        name: mysql
        volumeMounts:
        - name: mysql-wordpress
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
          name: mysql
      volumes:
      - name: mysql-wordpress
