manifest/service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
