manifest/service-wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
