manifest/ingress-wordpress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-domain
spec:
  rules:
  - host: minikube.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
